--- a/test/fixtures/locations.yml
+++ b/test/fixtures/locations.yml
@@ -1,11 +1,106 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-# This model initially had no columns defined.  If you add columns to the
-# model remove the '{}' from the fixture names and add the columns immediately
-# below each fixture, per the syntax in the comments below
-#
-one: {}
-# column: value
-#
-two: {}
-#  column: value
+---
+_id: { "$oid" : 559401ff54617474f6000001 }
+coordinates: 
+  - -86.902298
+  - 32.3182314
+long_name: Alabama
+short_name: AL
+
+---
+_id: { "$oid" : 559401ff54617474f6000002 }
+coordinates: 
+  - -81.5157535
+  - 27.6648274
+long_name: Florida
+short_name: FL
+
+---
+_id: { "$oid" : 559401ff54617474f6000003 }
+coordinates: 
+  - -82.9000751
+  - 32.1656221
+long_name: Georgia
+short_name: GA
+
+---
+_id: { "$oid" : 559401ff54617474f6000004 }
+coordinates: 
+  - -86.5804473
+  - 35.5174913
+long_name: Tennessee
+short_name: TN
+
+---
+_id: { "$oid" : 559401ff54617474f600000a }
+coordinates: 
+  - -91.8318334
+  - 35.20105
+long_name: Arkansas
+short_name: AR
+
+---
+_id: { "$oid" : 559401ff54617474f600000b }
+coordinates: 
+  - -91.96233269999999
+  - 30.9842977
+long_name: Louisiana
+short_name: LA
+
+---
+_id: { "$oid" : 559401ff54617474f600000c }
+coordinates: 
+  - -97.092877
+  - 35.0077519
+long_name: Oklahoma
+short_name: OK
+
+---
+_id: { "$oid" : 559401ff54617474f600000d }
+coordinates: 
+  - -99.9018131
+  - 31.9685988
+long_name: Texas
+short_name: TX
+
+---
+_id: { "$oid" : 559401ff54617474f600000f }
+coordinates: 
+- -101.0020119
+- 47.5514926
+long_name: North Dakota
+short_name: ND
+
+---
+_id: { "$oid" : 559401ff54617474f6000011 }
+coordinates: 
+- -76.64127119999999
+- 39.0457549
+long_name: Maryland
+short_name: MD
+
+---
+_id: { "$oid" : 559401ff54617474f6000012 }
+coordinates: 
+- -77.1945247
+- 41.2033216
+long_name: Pennsylvania
+short_name: PA
+
+---
+_id: { "$oid" : 559401ff54617474f6000013 }
+coordinates: 
+- -78.6568942
+- 37.4315734
+long_name: Virginia
+short_name: VA
+
+---
+_id: { "$oid" : 559401ff54617474f6000014 }
+coordinates: 
+- -80.4549026
+- 38.5976262
+long_name: West Virginia
+short_name: WV
+...
